--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body class="rtl">
 
@@ -25,7 +25,7 @@
     <div class="header-content">
       <!-- Logo -->
       <a href="index.html" class="logo">
-        <img src="assets/images/logo.svg" alt="Fancy Foods Logo" class="logo-icon">
+        <img src="assets/images/logo.png" alt="Fancy Foods Logo" class="logo-icon">
         <div class="logo-text">
           <span class="logo-text-main" data-lang="ar">فانسي فودز</span>
           <span class="logo-text-main" data-lang="en" style="display:none;">Fancy Foods</span>
@@ -323,7 +323,7 @@
       <!-- Company Info -->
       <div class="footer-col">
         <a href="index.html" class="logo" style="margin-bottom: 20px;">
-          <img src="assets/images/logo.svg" alt="Fancy Foods Logo" class="logo-icon">
+          <img src="assets/images/logo.png" alt="Fancy Foods Logo" class="logo-icon">
           <div class="logo-text">
             <span class="logo-text-main" style="color: white;" data-lang="ar">فانسي فودز</span>
             <span class="logo-text-main" style="color: white; display:none;" data-lang="en">Fancy Foods</span>
@@ -350,10 +350,35 @@
         <h4 data-lang="ar">تواصل معنا</h4>
         <h4 data-lang="en" style="display:none;">Contact Us</h4>
         <ul>
-          <li>📱 +963-XX-XXX-XXXX</li>
-          <li>📧 info@fancyfoods.com</li>
-          <li data-lang="ar">📍 سوريا</li>
-          <li data-lang="en" style="display:none;">📍 Syria</li>
+          <li>
+            📱
+            <span data-lang="ar">
+              <a href="tel:00971504690978" dir="ltr" class="phone-number">+971504690978</a>
+              <span> | </span>
+              <a href="https://wa.me/971504690978" target="_blank" rel="noopener noreferrer">واتساب</a>
+            </span>
+            <span data-lang="en" style="display:none;">
+              <a href="tel:00971504690978" dir="ltr" class="phone-number">+971504690978</a>
+              <span> | </span>
+              <a href="https://wa.me/971504690978" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+            </span>
+          </li>
+          <li>
+            📱
+            <span data-lang="ar">
+              <a href="tel:+963988216431" dir="ltr" class="phone-number">+963988216431</a>
+              <span> | </span>
+              <a href="https://wa.me/963988216431" target="_blank" rel="noopener noreferrer">واتساب</a>
+            </span>
+            <span data-lang="en" style="display:none;">
+              <a href="tel:+963988216431" dir="ltr" class="phone-number">+963988216431</a>
+              <span> | </span>
+              <a href="https://wa.me/963988216431" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+            </span>
+          </li>
+          <li>📧 <a href="mailto:info@fancy-foods.com">info@fancy-foods.com</a></li>
+          <li data-lang="ar">📍 سوريا - دمشق</li>
+          <li data-lang="en" style="display:none;">📍 Damascus, Syria</li>
         </ul>
       </div>
     </div>
